<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.almostrealism</groupId>
    <artifactId>common</artifactId>
    <version>0.73</version>

	<properties>
		<jacoco.version>0.8.11</jacoco.version>
		<kotlin.version>1.8.20</kotlin.version>

		<protobuf.version>3.21.7</protobuf.version>
		<protoc.version>3.21.7</protoc.version>

		<!-- TODO - These should not be necessary -->
		<javafx.version>21</javafx.version>
		<javafx.classifier>mac-aarch64</javafx.classifier>

		<!-- Flowtree dependencies -->
		<dcache.version>0.24.1</dcache.version>
	</properties>

	<modules>
		<module>relation</module>
		<module>io</module>
		<module>code</module>
		<module>hardware</module>
		<module>algebra</module>
		<module>geometry</module>
		<module>graph</module>
		<module>stats</module>
		<module>uml</module>
		<module>chemistry</module>
		<module>color</module>
		<module>heredity</module>
		<module>physics</module>
		<module>space</module>
		<module>time</module>
		<module>utils</module>
		<module>optimize</module>
		<module>collect</module>
		<module>ml</module>
		<module>ml-script</module>
		<module>llvm</module>
		<module>tools</module>
		<module>render</module>
		<module>audio</module>
		<module>music</module>
		<module>compose</module>
		<module>graphpersist</module>
		<module>flowtreeapi</module>
		<module>flowtree-python</module>
		<module>flowtree</module>
		<module>ml-onnx</module>
		<module>ml-djl</module>
		<module>spatial</module>
		<module>utils-http</module>
	</modules>

	<packaging>pom</packaging>

    <build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<compilerArgs>
						<arg>-h</arg>
						<arg>target/headers</arg>
					</compilerArgs>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<!-- Timeout in seconds for forked test processes (4 hour default) -->
					<forkedProcessTimeoutInSeconds>14400</forkedProcessTimeoutInSeconds>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.basedir}/.qodana/code-coverage/</outputDirectory>
							<formats>XML</formats>
							<includes>
								<include>**</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<!-- Output to docs/apidocs for integration with HTML documentation -->
					<reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
					<destDir>apidocs</destDir>

					<!-- Encoding settings -->
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>

					<!-- Aggregate all modules -->
					<aggregate>true</aggregate>

					<!-- Continue despite minor errors (heading sequence, etc.) -->
					<failOnError>false</failOnError>
					<failOnWarnings>false</failOnWarnings>

					<!-- Show private members for comprehensive documentation -->
					<show>private</show>

					<!-- Add useful links -->
					<links>
						<link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
					</links>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<!-- Data and Persistence -->
			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java</artifactId>
				<version>${protobuf.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java-util</artifactId>
				<version>${protobuf.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.16.1</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.16.1</version>
			</dependency>

			<!-- ML Libraries -->
			<dependency>
				<groupId>com.microsoft.onnxruntime</groupId>
				<artifactId>onnxruntime</artifactId>
				<version>1.22.0</version>
			</dependency>

			<dependency>
				<groupId>ai.djl.sentencepiece</groupId>
				<artifactId>sentencepiece</artifactId>
				<version>0.33.0</version>
			</dependency>

			<!-- Python -->
			<dependency>
				<groupId>org.python</groupId>
				<artifactId>jython-standalone</artifactId>
				<version>2.7.2</version>
			</dependency>

			<!-- Cloud -->
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk</artifactId>
				<version>1.11.289</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Almost Realism Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/almostrealism/common</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>dcache-releases</id>
			<name>dCache.ORG maven repository</name>
			<url>https://download.dcache.org/nexus/repository/public/</url>
			<layout>default</layout>
		</repository>
	</repositories>
</project>
